--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
+**/node_modules
 /.pnp
 .pnp.js
 
@@ -13,6 +11,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +20,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE
+.vscode/
+
+# lock files (optional, depending on package manager policy)
+# package-lock.json
+# yarn.lock
